--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "10.4.15",
     "clsx": "^2.0.0",
-    "eslint": "^9.3.0",
-    "eslint-config-next": "^14.2.3",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.18",
     "framer-motion": "^10.16.0",
     "geist": "^1.5.1",
-    "next": "^14.2.3",
-    "postcss": "^8.4.38",
+    "next": "^16.0.3",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.4.5"
+    "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.3",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
